--- a/ConversorMoedas/Pages/Shared/_Layout.cshtml
+++ b/ConversorMoedas/Pages/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ConversorMoedas</title>
     <meta name="description" content="Conversor de moedas online gratuito: converta dólar, euro, real e mais. Atualizado em tempo real com taxas do mercado. Sem cadastro!">
+    <meta name="google-adsense-account" content="ca-pub-6740658443846581">
+    <title>@ViewData["Title"] - ConversorMoedas</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ConversorMoedas.styles.css" asp-append-version="true" />
